# adipose

./: .gitignore  BUILD.md  DOCUMENTATION.md  GIT_COMMIT_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_README.md  adipose.spec  build.sh  package-release.sh  pyproject.toml  requirements.txt  setup.py
.github/: RELEASE_WORKFLOW.md
.github/workflows/: build-release.yml
adipose/cli/: main.py
adipose/core/: generator.py
adipose/generators/backend/: django_generator.py  dotnet_generator.py  express_generator.py  laravel_generator.py  springboot_generator.py
adipose/generators/frontend/: avaloniaui_generator.py  flutter_generator.py  javascript_generator.py  kotlin_generator.py  swift_generator.py
adipose/schemas/: config.py
adipose/templates/backend/django/: authentication.py.j2  manage.py.j2  middleware.py.j2  model.py.j2  serializer.py.j2  settings.py.j2  urls.py.j2  viewset.py.j2
adipose/utils/: helpers.py
examples/: blog-api.yaml
